--- a/contactmanager/src/app/contacts/contacts.html
+++ b/contactmanager/src/app/contacts/contacts.html
@@ -1,3 +1,118 @@
+<div id="theForm">
+  <h2>
+    Contact Form
+  </h2>
+  <form #f="ngForm" name="contactForm" (submit)="addContact(f)">
+
+    <div class="form-group">
+      <label>First Name</label>
+      <input type="text"
+        class="form-control"
+        name="firstName"
+        [(ngModel)]="contact.firstName"
+        #contactModel="ngModel"
+        required>
+      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+        The first name is required
+      </span>
+    </div>
+
+    <div class="form-group">
+      <label>Last Name</label>
+      <input type="text"
+        class="form-control"
+        name="lastName"
+        [(ngModel)]="contact.lastName"
+        #contactModel="ngModel"
+        required>
+      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+        The last name is required
+      </span>
+    </div>
+
+    <div class="form-group">
+      <label>Email Address</label>
+      <input type="text"
+        class="form-control"
+        name="emailAddress"
+        [(ngModel)]="contact.emailAddress"
+        #contactModel="ngModel"
+        required>
+      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+        The email address is required
+      </span>
+    </div>
+    <div class="form-group">
+      <label>Phone Number</label>
+      <input type="text"
+        class="form-control"
+        name="phone"
+        [(ngModel)]="contact.phone"
+        #contactModel="ngModel"
+        required>
+      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+        The phone number is required
+      </span>
+    </div>
+
+    <div class="form-group">
+      <label>Member/NonMember</label>
+      &nbsp;
+      <label class="radio-inline">
+      <input type="radio"
+        class="form-control"
+        name="optradio"
+        value="member"
+        [(ngModel)]="contact.status" >
+        &nbsp; Member
+      </label>
+
+      &nbsp;
+       <label class="radio-inline">
+      <input type="radio"
+        class="form-control"
+        name="optradio"
+        value="nonmember"
+        [(ngModel)]="contact.status" >
+        &nbsp; NonMember
+      </label>
+    </div>
+ 
+    <div class="form-group">
+      <label>Birth Date</label>
+      <input type="date"
+        class="form-control"
+        name="dob"
+        [(ngModel)]="contact.dob"
+        #contactModel="ngModel"
+        required>
+      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+        The date of birth is required
+      </span>
+    </div>
+
+      <div class="form-group">
+      <label>Upload Image</label>
+      <input type="file"
+        class="form-control"
+        name="imageName"
+        [(ngModel)]="contact.imageName"
+        #imageName="ngModel"
+        (change)="onFileSelected($event)">
+      
+    </div>
+
+    <button class="btn btn-primary btn-sm"
+            [disabled]="f.invalid">
+            
+            Add Contact
+    </button>
+    
+ 
+  </form>
+</div>
+
+
 <div id="theList">
     <h2>Contact List</h2>    
 
@@ -21,6 +136,7 @@
             #firstName="ngModel"
             [ngClass]="{ 'is-invalid': firstName.touched && firstName.invalid }">
         </div>
+         
   
         <div class="col-2">
           <input type="text"
