Completed button edit, delete

--- a/contactmanager/src/app/contacts/contacts.css
+++ b/contactmanager/src/app/contacts/contacts.css
@@ -3,3 +3,22 @@
     border: 2px solid black;
     margin: 10px;
 }
+
+.form-group > input[type="text"], input[type="email"], input[type="date"], input[type="file"] {
+    width: 30%;
+    padding: 10px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    display: inline;
+}
+.form-group > label {
+    width: 10%;
+}
+
+img.contact-image {
+  max-width: 100px;
+  max-height: 100px;
+  object-fit: cover;
+  border-radius: 8px;
+}
