--- a/contactmanager/src/app/contacts/contacts.html
+++ b/contactmanager/src/app/contacts/contacts.html
@@ -1,9 +1,7 @@
 <div id="theForm">
-  <h2>
-    Contact Form
-  </h2>
+  <h2>Contact Form</h2>
   <form #f="ngForm" name="contactForm" (submit)="addContact(f)">
-
+    
     <div class="form-group">
       <label>First Name</label>
       <input type="text"
@@ -42,6 +40,7 @@
         The email address is required
       </span>
     </div>
+
     <div class="form-group">
       <label>Phone Number</label>
       <input type="text"
@@ -59,25 +58,24 @@
       <label>Member/NonMember</label>
       &nbsp;
       <label class="radio-inline">
-      <input type="radio"
-        class="form-control"
-        name="optradio"
-        value="member"
-        [(ngModel)]="contact.status" >
-        &nbsp; Member
+        <input type="radio"          
+          name="optradio"
+          value="member"
+          [(ngModel)]="contact.status"
+          >
+        &nbsp;Member
       </label>
-
       &nbsp;
-       <label class="radio-inline">
-      <input type="radio"
-        class="form-control"
-        name="optradio"
-        value="nonmember"
-        [(ngModel)]="contact.status" >
-        &nbsp; NonMember
-      </label>
+      <label class="radio-inline">
+        <input type="radio"          
+          name="optradio"
+          value="nonmember"
+          [(ngModel)]="contact.status"
+          >
+        &nbsp;NonMember
+      </label>  
     </div>
- 
+
     <div class="form-group">
       <label>Birth Date</label>
       <input type="date"
@@ -91,24 +89,22 @@
       </span>
     </div>
 
-      <div class="form-group">
+    <div class="form-group">
       <label>Upload Image</label>
       <input type="file"
         class="form-control"
         name="imageName"
         [(ngModel)]="contact.imageName"
         #imageName="ngModel"
-        (change)="onFileSelected($event)">
-      
+        (change)="onFileSelected($event)" />      
     </div>
 
-    <button class="btn btn-primary btn-sm"
-            [disabled]="f.invalid">
-            
-            Add Contact
+    <button
+      class="btn btn-primary btn-sm"
+      [disabled]="f.invalid">
+      Add Contact
     </button>
-    
- 
+
   </form>
 </div>
 
@@ -136,7 +132,6 @@
             #firstName="ngModel"
             [ngClass]="{ 'is-invalid': firstName.touched && firstName.invalid }">
         </div>
-         
   
         <div class="col-2">
           <input type="text"
@@ -169,21 +164,27 @@
             <img src="http://localhost/contactmanagerangular/contactapi/uploads/{{item.imageName}}" width="75" height="75" alt="{{item.imageName}}" />
         </div>
   
-        <!--<div class="col-2">
+        <div class="col-2">
           <input type="button"
             value="Edit"
             class="btn btn-success btn-sm"
             [disabled]="firstName.invalid || lastName.invalid || emailAddress.invalid || phone.invalid"
-            (click)="editContact(firstName, lastName, emailAddress, phone, item.contactID)">
+            (click)="editContact(item.firstName, item.lastName, item.emailAddress, item.phone, item.status, item.dob, item.imageName, item.typeID, item.contactID)">
   
           <input type="button"
             value="Delete"
             class="btn btn-danger btn-sm"
             (click)="deleteContact(item.contactID? item.contactID:0)">
-        </div>-->
+        </div>
   
       </div>
     </div>
 
 
+</div>
+
+<div id="links">
+    <button class="btn btn-sm btn-dark text-white" routerLink="/about">
+        About Us
+    </button>
 </div>
