Added Edit, Delete php

--- a/contactmanager/src/app/contacts/contacts.html
+++ b/contactmanager/src/app/contacts/contacts.html
@@ -169,7 +169,7 @@
             value="Edit"
             class="btn btn-success btn-sm"
             [disabled]="firstName.invalid || lastName.invalid || emailAddress.invalid || phone.invalid"
-            (click)="editContact(item.firstName, item.lastName, item.emailAddress, item.phone, item.status, item.dob, item.imageName, item.typeID, item.contactID)">
+            (click)="editContact(firstName, lastName, emailAddress, phone, item.contactID)">
   
           <input type="button"
             value="Delete"
