--- a/contactmanager/src/app/contacts/contacts.html
+++ b/contactmanager/src/app/contacts/contacts.html
@@ -1,190 +1,115 @@
 <div id="theForm">
   <h2>Contact Form</h2>
   <form #f="ngForm" name="contactForm" (submit)="addContact(f)">
-    
+
     <div class="form-group">
       <label>First Name</label>
-      <input type="text"
-        class="form-control"
-        name="firstName"
-        [(ngModel)]="contact.firstName"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+      <input type="text" class="form-control" name="firstName"
+        [(ngModel)]="contact.firstName" #firstNameModel="ngModel" required>
+      <span class="help-block danger" *ngIf="firstNameModel.errors?.['required'] && firstNameModel.touched">
         The first name is required
       </span>
     </div>
 
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text"
-        class="form-control"
-        name="lastName"
-        [(ngModel)]="contact.lastName"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+      <input type="text" class="form-control" name="lastName"
+        [(ngModel)]="contact.lastName" #lastNameModel="ngModel" required>
+      <span class="help-block danger" *ngIf="lastNameModel.errors?.['required'] && lastNameModel.touched">
         The last name is required
       </span>
     </div>
 
     <div class="form-group">
       <label>Email Address</label>
-      <input type="text"
-        class="form-control"
-        name="emailAddress"
-        [(ngModel)]="contact.emailAddress"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+      <input type="text" class="form-control" name="emailAddress"
+        [(ngModel)]="contact.emailAddress" #emailModel="ngModel" required>
+      <span class="help-block danger" *ngIf="emailModel.errors?.['required'] && emailModel.touched">
         The email address is required
       </span>
     </div>
 
     <div class="form-group">
       <label>Phone Number</label>
-      <input type="text"
-        class="form-control"
-        name="phone"
-        [(ngModel)]="contact.phone"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+      <input type="text" class="form-control" name="phone"
+        [(ngModel)]="contact.phone" #phoneModel="ngModel" required>
+      <span class="help-block danger" *ngIf="phoneModel.errors?.['required'] && phoneModel.touched">
         The phone number is required
       </span>
     </div>
 
     <div class="form-group">
-      <label>Member/NonMember</label>
-      &nbsp;
+      <label>Member/NonMember</label>&nbsp;
       <label class="radio-inline">
-        <input type="radio"          
-          name="optradio"
-          value="member"
-          [(ngModel)]="contact.status"
-          >
-        &nbsp;Member
+        <input type="radio" name="optradio" value="member" [(ngModel)]="contact.status"> Member
       </label>
       &nbsp;
       <label class="radio-inline">
-        <input type="radio"          
-          name="optradio"
-          value="nonmember"
-          [(ngModel)]="contact.status"
-          >
-        &nbsp;NonMember
-      </label>  
+        <input type="radio" name="optradio" value="nonmember" [(ngModel)]="contact.status"> NonMember
+      </label>
     </div>
 
     <div class="form-group">
       <label>Birth Date</label>
-      <input type="date"
-        class="form-control"
-        name="dob"
-        [(ngModel)]="contact.dob"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
+      <input type="date" class="form-control" name="dob"
+        [(ngModel)]="contact.dob" #dobModel="ngModel" required>
+      <span class="help-block danger" *ngIf="dobModel.errors?.['required'] && dobModel.touched">
         The date of birth is required
       </span>
     </div>
 
     <div class="form-group">
       <label>Upload Image</label>
-      <input type="file"
-        class="form-control"
-        name="imageName"
-        [(ngModel)]="contact.imageName"
-        #imageName="ngModel"
-        (change)="onFileSelected($event)" />      
+      <input type="file" class="form-control" name="imageName" (change)="onFileSelected($event)" />
     </div>
 
-    <button
-      class="btn btn-primary btn-sm"
-      [disabled]="f.invalid">
-      Add Contact
-    </button>
-
+    <button class="btn btn-primary btn-sm" [disabled]="f.invalid">Add Contact</button>
   </form>
 </div>
 
-
 <div id="theList">
-    <h2>Contact List</h2>    
+  <h2>Contact List</h2>
+  <div>
+    <div *ngFor="let item of contacts; let i = index;" class="row">
 
-    <div>
-      <div *ngFor="let item of contacts;let i = index;" class="row">
-  
-        <!-- <div class="col-2">
-          <input type="text"
-            [(ngModel)]="contacts[i].contactID"
-            class="form-control"
-            required
-            #contactID="ngModel"
-            [ngClass]="{ 'is-invalid': contactID.touched && contactID.invalid }">
-        </div> -->
-  
-        <div class="col-2">
-          <input type="text"
-            [(ngModel)]="item.firstName"
-            class="form-control"
-            required
-            #firstName="ngModel"
-            [ngClass]="{ 'is-invalid': firstName.touched && firstName.invalid }">
-        </div>
-  
-        <div class="col-2">
-          <input type="text"
-            [(ngModel)]="item.lastName"
-            class="form-control"
-            required
-            #lastName="ngModel"
-            [ngClass]="{ 'is-invalid': lastName.touched && lastName.invalid }">
-        </div>
-  
-        <div class="col-2">
-          <input type="text"
-            [(ngModel)]="item.emailAddress"
-            class="form-control"
-            required
-            #emailAddress="ngModel"
-            [ngClass]="{ 'is-invalid': emailAddress.touched && emailAddress.invalid }">
-        </div>
-  
-        <div class="col-2">
-          <input type="text"
-            [(ngModel)]="item.phone"
-            class="form-control"
-            required
-            #phone="ngModel"
-            [ngClass]="{ 'is-invalid': phone.touched && phone.invalid }">
-        </div>      
-  
-        <div class="col-2">        
-            <img src="http://localhost/contactmanagerangular/contactapi/uploads/{{item.imageName}}" width="75" height="75" alt="{{item.imageName}}" />
-        </div>
-  
-        <div class="col-2">
-          <input type="button"
-            value="Edit"
-            class="btn btn-success btn-sm"
-            [disabled]="firstName.invalid || lastName.invalid || emailAddress.invalid || phone.invalid"
-            (click)="editContact(firstName, lastName, emailAddress, phone, item.contactID)">
-  
-          <input type="button"
-            value="Delete"
-            class="btn btn-danger btn-sm"
-            (click)="deleteContact(item.contactID? item.contactID:0)">
-        </div>
-  
+      <div class="col-2">
+        <input type="text" [(ngModel)]="item.firstName" class="form-control"
+          required #firstName="ngModel" [ngClass]="{ 'is-invalid': firstName.touched && firstName.invalid }">
       </div>
+
+      <div class="col-2">
+        <input type="text" [(ngModel)]="item.lastName" class="form-control"
+          required #lastName="ngModel" [ngClass]="{ 'is-invalid': lastName.touched && lastName.invalid }">
+      </div>
+
+      <div class="col-2">
+        <input type="text" [(ngModel)]="item.emailAddress" class="form-control"
+          required #emailAddress="ngModel" [ngClass]="{ 'is-invalid': emailAddress.touched && emailAddress.invalid }">
+      </div>
+
+      <div class="col-2">
+        <input type="text" [(ngModel)]="item.phone" class="form-control"
+          required #phone="ngModel" [ngClass]="{ 'is-invalid': phone.touched && phone.invalid }">
+      </div>
+
+      <div class="col-2">
+        <img [src]="'http://localhost/contactmanagerangular/contactapi/uploads/' + item.imageName"
+          width="75" height="75" alt="{{item.imageName}}" />
+      </div>
+
+      <div class="col-2">
+        <input type="button" value="Edit" class="btn btn-success btn-sm"
+          [disabled]="firstName.invalid || lastName.invalid || emailAddress.invalid || phone.invalid"
+          (click)="editContact(firstName, lastName, emailAddress, phone, item.contactID)">
+
+        <input type="button" value="Delete" class="btn btn-danger btn-sm"
+          (click)="deleteContact(item.contactID || 0)">
+      </div>
+
     </div>
-
-
+  </div>
 </div>
 
 <div id="links">
-    <button class="btn btn-sm btn-dark text-white" routerLink="/about">
-        About Us
-    </button>
+  <button class="btn btn-sm btn-dark text-white" routerLink="/about">About Us</button>
 </div>
