--- a/contactmanager/src/app/addcontacts/addcontacts.html
+++ b/contactmanager/src/app/addcontacts/addcontacts.html
@@ -107,3 +107,9 @@
 
   </form>
 </div>
+
+<div id="links">
+    <button class="btn btn-sm btn-dark text-white" routerLink="/contact">
+        Back to Contact Manager
+    </button>
+</div>
