image changed at edit

--- a/contactmanager/src/app/updatecontacts/updatecontacts.html
+++ b/contactmanager/src/app/updatecontacts/updatecontacts.html
@@ -35,6 +35,23 @@
       <input type="date" name="dob" class="form-control" [(ngModel)]="contact.dob" required>
     </div>
 
+    <div class="form-group">
+  <label>Current or New Image Preview</label><br>
+  <img
+    [src]="previewUrl ? previewUrl : 'http://localhost/contactmanagerangular/contactapi/uploads/' + contact.imageName"
+    alt="Contact Image"
+    width="100"
+    height="100"
+    class="mb-3 border rounded"
+  />
+</div>
+
+<div class="form-group">
+  <label>Upload New Image</label>
+  <input type="file" name="image" class="form-control" (change)="onFileSelected($event)">
+</div>
+
+
     <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Update</button>
     <button class="btn btn-secondary" routerLink="/contacts">Cancel</button>
 
