Prevents adding duplicate email or image

--- a/contactmanager/src/app/addcontacts/addcontacts.css
+++ b/contactmanager/src/app/addcontacts/addcontacts.css
@@ -15,3 +15,19 @@
 .form-group > label {
     width: 10%;
 }
+
+.container {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  margin-top: 30px;
+  background-color: #f9f9f9;
+}
+
+button {
+  margin-right: 10px;
+}
+
+#links {
+  margin-top: 20px;
+}
