--- a/contactmanager/src/app/updatecontacts/updatecontacts.html
+++ b/contactmanager/src/app/updatecontacts/updatecontacts.html
@@ -59,3 +59,10 @@
     <div *ngIf="error" class="alert alert-danger mt-3">{{ error }}</div>
   </form>
 </div>
+
+
+<div id="links">
+    <button class="btn btn-sm btn-dark text-white" routerLink="/contact">
+        Back to Contact Manager
+    </button>
+</div>
