--- a/contactmanager/src/app/addcontacts/addcontacts.html
+++ b/contactmanager/src/app/addcontacts/addcontacts.html
@@ -1,115 +1,55 @@
-<div id="theForm">
-  <h2>Contact Form</h2>
-  <form #f="ngForm" name="contactForm" (submit)="addContact(f)">
+<div class="container">
+  <h2>Add Contact</h2>
+  <form #f="ngForm" (ngSubmit)="addContact(f)">
     
     <div class="form-group">
       <label>First Name</label>
-      <input type="text"
-        class="form-control"
-        name="firstName"
-        [(ngModel)]="contact.firstName"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
-        The first name is required
-      </span>
+      <input type="text" name="firstName" class="form-control" [(ngModel)]="contact.firstName" required>
     </div>
 
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text"
-        class="form-control"
-        name="lastName"
-        [(ngModel)]="contact.lastName"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
-        The last name is required
-      </span>
+      <input type="text" name="lastName" class="form-control" [(ngModel)]="contact.lastName" required>
     </div>
 
     <div class="form-group">
       <label>Email Address</label>
-      <input type="text"
-        class="form-control"
-        name="emailAddress"
-        [(ngModel)]="contact.emailAddress"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
-        The email address is required
-      </span>
+      <input type="text" name="emailAddress" class="form-control" [(ngModel)]="contact.emailAddress" required>
     </div>
 
     <div class="form-group">
       <label>Phone Number</label>
-      <input type="text"
-        class="form-control"
-        name="phone"
-        [(ngModel)]="contact.phone"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
-        The phone number is required
-      </span>
+      <input type="text" name="phone" class="form-control" [(ngModel)]="contact.phone" required>
     </div>
 
     <div class="form-group">
-      <label>Member/NonMember</label>
-      &nbsp;
-      <label class="radio-inline">
-        <input type="radio"          
-          name="optradio"
-          value="member"
-          [(ngModel)]="contact.status"
-          >
-        &nbsp;Member
-      </label>
-      &nbsp;
-      <label class="radio-inline">
-        <input type="radio"          
-          name="optradio"
-          value="nonmember"
-          [(ngModel)]="contact.status"
-          >
-        &nbsp;NonMember
-      </label>  
+      <label>Status</label>
+      <select name="status" class="form-control" [(ngModel)]="contact.status" required>
+        <option value="member">Member</option>
+        <option value="nonmember">NonMember</option>
+      </select>
     </div>
 
     <div class="form-group">
-      <label>Birth Date</label>
-      <input type="date"
-        class="form-control"
-        name="dob"
-        [(ngModel)]="contact.dob"
-        #contactModel="ngModel"
-        required>
-      <span class="help-block danger" *ngIf="contactModel.errors?.['required'] && contactModel.touched">
-        The date of birth is required
-      </span>
+      <label>Date of Birth</label>
+      <input type="date" name="dob" class="form-control" [(ngModel)]="contact.dob" required>
     </div>
 
     <div class="form-group">
       <label>Upload Image</label>
-      <input type="file"
-        class="form-control"
-        name="imageName"
-        [(ngModel)]="contact.imageName"
-        #imageName="ngModel"
-        (change)="onFileSelected($event)" />      
+      <input type="file" class="form-control" name="image" (change)="onFileSelected($event)" />
     </div>
 
-    <button
-      class="btn btn-primary btn-sm"
-      [disabled]="f.invalid">
-      Add Contact
-    </button>
+    <button type="submit" class="btn btn-primary mr-2" [disabled]="f.invalid">Add Contact</button>
+    <button class="btn btn-secondary" routerLink="/contacts">Cancel</button>
 
+    <div *ngIf="success" class="alert alert-success mt-3">{{ success }}</div>
+    <div *ngIf="error" class="alert alert-danger mt-3">{{ error }}</div>
   </form>
 </div>
 
 <div id="links">
-    <button class="btn btn-sm btn-dark text-white" routerLink="/contact">
-        Back to Contact Manager
-    </button>
+  <button class="btn btn-sm btn-dark text-white" routerLink="/contacts">
+    Back to Contact Manager
+  </button>
 </div>
